[package]
authors = ["USAGI.NETWORK / Usagi Ito <the@usagi.network>"]
description = "It's a sugars for web related crates such as `web-sys`, `js-sys`, `wasm-bindgen`s."
edition = "2018"
name = "web-sugars"
version = "1.0.0"
categories = ["encoding"]
keywords = ["web-sys", "js-sys", "wasm-bindgen", "wasm", "web"]
license = "MIT"
repository = "https://github.com/usagi/web-sugars"
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
drop_ok = "1.0.2"
drop_some = "1.0.1"
js-sys = "0.3.44"
log = "0.4.11"
serde = {version = "1.0.115", features = ["derive"]}
serde_derive = "1.0.115"
serde_json = "1.0.57"
thiserror = "1.0.20"
wasm-bindgen = {version = "0.2.67", features = ["serde-serialize"]}
wasm-bindgen-futures = "0.4.17"
web-sys = {version = "0.3.44", features = [
  'Window',
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'HtmlCanvasElement',
  'CanvasRenderingContext2d',
  'HtmlCollection',
  'DocumentFragment',
  'XPathResult',
]}
futures = "0.3.5"

[dev-dependencies]
wasm-bindgen-test = "0.3.17"
